summative.moria.Moria.scala.error
Compilation error:
Moria:4: error: not found: value Direction
       setDirection(Direction.EAST);
                    ^Moria:11: error: not found: value Direction
      setDirection(Direction.east);
                   ^Moria:15: error: not found: value Direction
      setDirection(Direction.WEST);
                   ^